@@ -1,3 +1,9 @@
+2000-07-06  Larry Jones  <larry.jones@sdrc.com>
+
+	* fileattr.c (fileattr_write): Don't delete the unrecog_head list
+	when writing...
+	(fileattr_free): Delete it when freeing!
+
 2000-07-05  Larry Jones  <larry.jones@sdrc.com>
 
 	* admin.c (admin): Handle -t in client so reading from files works
